<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDay</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_see_all_record">我的记录</string>

    <!--  -->
    <string name="export_record">导出记录</string>
    <string name="create_command">创建按钮</string>
    <string name="see_record">查看记录</string>
    <string name="oneWeek">周统计</string>
    <string name="oneMonth">百度云同步</string>
    <string name="oneYear">导入文件</string>
    <string name="week_show">周统计</string>
    <string name="title_activity_temperare">Temperare</string>
    <string name="title_activity_file_list">FileList</string>
    <string name="file_name">file_name</string>
    <string name="icon">icon</string>
    <string name="file_modify">file_modify</string>

</resources>