<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/create_command"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/create_command"/>
    <item
        android:id="@+id/see_record"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/see_record"/>
    <item
        android:id="@+id/export_record"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/export_record"/>
    <item android:id="@+id/oneWeek" android:title="@string/oneWeek" android:orderInCategory="100" android:showAsAction="never"></item>
    <item android:id="@+id/oneMonth" android:title="@string/oneMonth" android:showAsAction="never" android:orderInCategory="100"></item>
    <item android:id="@+id/oneYear" android:title="@string/oneYear" android:orderInCategory="100" android:showAsAction="never"></item>

</menu>